--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "@eslint/js": "^9.29.0",
+    "eslint": "^8.57.1",
+    "globals": "^16.2.0",
     "jest": "^29.7.0"
   }
 }
