--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,16 @@ jobs:
         run: npm audit
         working-directory: ./frontend
       
-      - name: Snyk security scan
+      - name: Snyk security scan frontend
+        working-directory: ./frontend
+        uses: snyk/actions/node@master
+        with:
+          command: monitor
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Snyk security scan backend
+        working-directory: ./backend
         uses: snyk/actions/node@master
         with:
           command: monitor
