--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,6 +21,10 @@ jobs:
         run: npm install
         working-directory: ./frontend
 
+      - name: Install dependencies (backend)
+        run: npm install
+        working-directory: ./backend
+
       - name: Run linting
         run: npm run lint
         working-directory: ./frontend
