--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,6 +53,10 @@ jobs:
         run: npm test -- --passWithNoTests
         working-directory: ./frontend
         
+      - name: Install docker-compose
+        run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
       - name: Build Docker images
         run: docker-compose build
 
