--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,6 +70,6 @@ jobs:
         run: |
           docker compose build
           docker tag ci-cd-frontend ${{ secrets.DOCKER_HUB_USERNAME }}/myrepo:frontend
-          docker tag ci-ci-backend ${{ secrets.DOCKER_HUB_USERNAME }}/myrepo:backend
+          docker tag ci-cd-backend ${{ secrets.DOCKER_HUB_USERNAME }}/myrepo:backend
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/myrepo:frontend
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/myrepo:backend
